<resources>
    <string name="app_name">ExoPlayerLibrary</string>
    <string name="open_list">Open list</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="block">Block</string>
    <string name="unblock">UnBlock</string>
    <string name="update_urls">Update URLs</string>
    <string name="prepare">Prepare</string>
    <string name="reset">Reset</string>
    <string name="create">Create</string>
    <string name="release">Release</string>
    <string name="open_video_action">Open video action</string>
    <string name="simple_demo">Simple Demo</string>
    <string name="hide_full_screen">Hide full screen</string>
</resources>
